--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ passenv = {[testenv]passenv}
 deps = {[testenv]deps}
 commands =
     {envpython} scripts/link_pyqt.py --tox {envdir}
-    {envpython} -bb -m pytest --cov --cov-report xml --cov-report=html --cov-report= {posargs:tests}
+    {envpython} -bb -m pytest --cov --cov-report xml --cov-report=html --cov-report= -rs -v {posargs:tests}
     {envpython} scripts/dev/check_coverage.py {posargs}
 
 # test envs with PyQt5 from PyPI
